[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[project]
name = "rainbowsnake"
version = "1.0.1"
authors = [
  { name="Rafe Milner", email="milnerrafe@icloud.com" },
]
description = "A simple python package that allows you to colour and format text in both terminal and idle environments."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Milnerrafe/Rainbow_Snake"
Issues = "https://github.com/Milnerrafe/Rainbow_Snake/issues"
